文章删除，修改评论显示逻辑